k8s/mail-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service  # Use the same name as you have in swarm.production.yml file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
      - name: mail-service
        image: "shub96/mail-service-production-linux-amd64"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80 # This is just purely descriptive

---

apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
