k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: front-end.info
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port: 
                  number: 8081
    - host: broker-service.info
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: broker-service
                port: 
                  number: 8080
